2003-02-21  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-manager: Added View->Expand All and Collapse All
	to address bug 108743

2003-03-20  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse.schemas.in: Added validity_threshold
	* seahorse-recipients: Removed recips property, removed Add All and
	Remove All, added validity checking using validity_threshold,
	added status bars for selection

2003-03-19  Jacob Perkins  <jap1@users.sourceforge.net>

	* src/Makefile.am: Patched to make freebsd-alpha port build.
	From: Akifyev Sergey <asa@gascom.ru>, Joe Marcus Clarke <marcus@freebsd.org>,
	Kris Kennaway <kris@obsecurity.org>
	* seahorse-key-store: Added ::get_key_from_model
	* seahorse-recipients: Simplified using seahorse_key_store_get_key_from_model,
	can use for recipients ops again

2003-03-18  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-properties: Make uid and entire notebook scrollable and have popup
	* seahorse-recipients: Can do multiple selection and every key at once

2003-03-14  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-widget: Updated internal hash to use seahorse_key_get_id()
	* seahorse-widget: Don't connect progress callback for key-manager
	* seahorse-key-manager: Only operations and key-list insensitive during progress,
	fixes bug 108386
	* seahorse-key: Format fingerprint, addresses bug 108306

2003-03-13  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse.schemas.in: Added missing column visibility schemas
	* seahorse-validity: Added DISABLED and REVOKED, removed sort function
	* seahorse-key-manager-store: Added Validity and Expires columns,
	added int columns to sort string columns
	* seahorse-preferences: Added toggles for Validity and Expires columns
	* seahorse-key: Added Disabled and Revoked options to ::get_validity
	* seahorse-encrypt-recipients-store: Updated to remove use of custom
	validity sort

2003-03-12  Jacob Perkins  <jap1@users.sourceforge.net>
