@@ -42,7 +42,7 @@ Also check bugzilla for other tasks.
 [X] Nice fingerprint (Resp: Jacob)
 [X] Encrypt & Sign operation; update as necessary (Resp: Jacob)
 [A] Update help with new usage & more concepts (Resp: Jacob & Gnome Doc Team)
-[ ] Icons for text editor popup (Resp: Jacob)
+[?] Icons for text editor popup (Resp: Jacob)
 [X] Don't list disabled or non-capable keys for encryption recipients (Resp: Jacob)
 [X] Key sorting by uid, trust & validity (Resp: Jacob)
 [X] Hide subkeys be default (Resp: Jacob)
@@ -59,6 +59,7 @@ Also check bugzilla for other tasks.
 [X] Context gconf listener (Resp: Jacob)
 [ ] Error check gconf & gnome help (Resp: Jacob)
 [ ] More refined key changes so that key-properties doesn't have to delete notebook pages
+[A] Backup key-pair
 
 1.0 (Focus: Gnome integration & usability)
 --------------------------------------------
