@@ -2,9 +2,11 @@
 # Please keep this file sorted alphabetically.
 data/seahorse.desktop.in
 data/seahorse.schemas.in
+src/dialogs/seahorse-add-subkey.c
 src/dialogs/seahorse-add-subkey.glade2
 src/dialogs/seahorse-add-uid.c
 src/dialogs/seahorse-add-uid.glade2
+src/dialogs/seahorse-change-passphrase.glade2
 src/dialogs/seahorse-delete.c
 src/dialogs/seahorse-decrypt-file.c
 src/dialogs/seahorse-decrypt-file.glade2
@@ -22,6 +24,7 @@ src/dialogs/seahorse-import.glade2
 src/dialogs/seahorse-key-properties.c
 src/dialogs/seahorse-key-properties.glade2
 src/dialogs/seahorse-passphrase.c
+src/dialogs/seahorse-passphrase.glade2
 src/dialogs/seahorse-preferences.glade2
 src/dialogs/seahorse-recipients.c
 src/dialogs/seahorse-recipients.glade2
