@@ -15,6 +15,7 @@ seahorse 0.7.2
 	* Main window not completely insensitive during progress and startup
 	* Key Properties shows a formatted fingerprint, tabs are scrollable
 	* Recipients allows multiple selection, has statusbars to show number selected
+	* Can expand and collapse all rows in key-manager
 
 seahorse 0.7.1
 --------------
