@@ -1,3 +1,7 @@
+2003-03-21  Jacob Perkins  <jap1@users.sourceforge.net>
+
+	* POTFILES.in: Added missing dialog files
+
 2003-03-08  Jacob Perkins  <jap1@users.sourceforge.net>
 
 	* POTFILES.in: Changed location of seahorse-key-properties,
