@@ -2,6 +2,7 @@
 
 	* seahorse-key-manager: Added View->Expand All and Collapse All
 	to address bug 108743
+	* seahorse-key-widget: Bug fix in hash table removal
 
 2003-03-20  Jacob Perkins  <jap1@users.sourceforge.net>
 
